--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,8 @@ body {
     font-size: 2rem;
     padding: 1.6rem 3.2rem;
     border-radius: 9px;
+
+    transition:  background-color 0.3s ;
 }
 
 .btn--full:link,
