--- a/css/style.css
+++ b/css/style.css
@@ -1,106 +1,8 @@
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
 
-html {
-    /* font-size: 10px; */
-    font-size: 62.5%;
-}
-
-body {
-    font-family: "Rubik", sans-serif;
-    line-height: 1;
-    font-weight: 400;
-    color: #555;
-}
-
-
-.main-nav-list {
-    list-style: none;
-    display: flex;
-    align-items: center;
-    gap: 3.2rem;
-}
-
-.main-nav-link:link,
-.main-nav-link:visited {
-    display: inline-block;
-    text-decoration: none;
-    color: #333;
-    font-weight: 500;
-    font-size: 1.8rem;
-    transition: all 0.3s;
-}
-
-.main-nav-link:hover,
-.main-nav-link:active {
-    color: #cf711f;
-}
-
-.main-nav-link.nav-cta:link,
-.main-nav-link.nav-cta:visited {
-    padding: 1.2rem 2.4rem;
-    border-radius:9px;
-    color: #fff;
-    background-color: #e67e22;
-}
-
-.main-nav-link.nav-cta:hover,
-.main-nav-link.nav-cta:active {
-    background-color: #cf711f;
-}
-
-
-
-.section-hero {
-    background-color: #fdf2e9;
-    padding: 4.8rem 0 9.6rem 0;
-}
-
-.hero {
-    max-width: 130rem;
-    margin: 0 auto;
-    padding: 0 3.2rem;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 9.6rem;
-    align-items: center;
-}
-
-
-
-
-.container {
-    max-width: 120rem;
-    padding: 0 3.2rem;
-    margin: 0 auto;
-}
-
-.grid {
-    display: grid;
-    gap: 9.6rem;
-    grid-template-columns: repeat(2, 1fr);
-}
-
-.grid--2-cols {
-    grid-template-columns: repeat(2, 1fr);
-
-}
-
-.grid--3-cols {
-    grid-template-columns: repeat(3, 1fr);
-
-}
-
-.grid--4-cols {
-    grid-template-columns: repeat(4, 1fr);
-
-}
 
 .heading-primary,
-.heading-secondary {
+.heading-secondary,
+.heading-tertiary {
     font-weight: 700;
     color: #333;
     letter-spacing: -0.5px;
@@ -116,6 +18,12 @@ body {
     font-size: 4.4rem;
     line-height: 1.2;
     margin-bottom: 9.6rem;
+}
+
+.heading-tertiary {
+    font-size: 3rem;
+    line-height: 1.2;
+    margin-bottom: 3.2rem;
 }
 
 .subheading {
@@ -227,6 +135,38 @@ body {
 .section-how {
     padding: 9.6rem 0;
     
+}
+
+.step-number {
+    font-size: 9.8rem;
+    font-weight: 600;
+    color:#ddd;
+    margin-bottom: 1.2rem;
+}
+
+.step-description {
+    font-size: 1.8rem;
+    line-height: 1.8;
+}
+
+.step-img-box{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.step-img-box::before {
+    content: "";
+    display: block;
+    width: 60%;
+    /* height: 60%; */
+    
+    padding-bottom: 60%;
+    background-color: #fdf2e9;
+}
+
+.step-img {
+    width: 35%;
 }
 
 
